# FormalLanguages_Practicum-2

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
sources/: Algo.cpp  Algo.h
stdin_stdout/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  tests.cpp  tools.h
